- You can choose to be a bat(wo)man when creating new character.(*)
- 'no-direction cancels' bug is fixed.
- New command '/', which can handle miscellaneous types of items.
- You can scroll chat-history with ctrl-o.
- "'" command is supported(see above).
- Graphics bug in win-client is fixed (by Tanix)
 
19/11/2001 (Jir)
- Some xp bonus to encourage partying (C.Blue's idea)
- Revised conditions to check equipments.
- Bugfix on /ignore command code.

20/11/2001 (Jir)
- You get stunned, confused and also drop some items when theft fails.
- I have put a bug where OOD monsters are summoned; now fixed (thx Tanix)

22/11/2001 (Jir)
- You can use {@O} inscription to control auto-retaliator.
- Neighboring monsters will try to interfere your attempt to fire.

23/11/2001 (Jir)
- Items with too long names are displayed with abbreviated names.
- New admin commands: /lua, /recall
- Multiple-melee attacks are efficiently handled now.

23/11/2001 (Tanix [Jir wrote this log])
- Recall/stair GoI message is removed.

24/11/2001
- Lua scripting

25/11/2001 (Jir)
- Uniques can resurrect after beating Morgoth.
- Kings/Queens will be alarmed of retire_timer.
- Players under lv-5 cannot throw items (anti-cheeze).

25/11/2001 (Tanix [log by Jir])
- Shallow dungeon levels won't be static (configurable).
- NO_GHOST / PRESERVE_DEATH_LEVEL options

27/11/2001 (Jir)
- Optimization in auto_retaliate (observable :)

29/11/2001 (Jir)
- Admin commands: /static-level, /unstatic-level (/sta, /unst)
- Client suppresses repeated messages.
- 12 more vaults borrowed from ZAngband (thx, the creators!)
- 3 original vaults. Also, 2 'Between Vaults' are now normal vaults.
- DM can now specify vault 128-255 by number.

30/11/2001 (Jir)
- lv-req can handle {0} stuffs from stores.
- 4 'Pattern vaults' are commented out. 5 more original vaults.
- Bug in new auto-retaliator code is fixed(thx Moltor for report).

01/12/2001 (Jir)
- lv-req is now based on both item's quality and depth.